kustomize/overlays/openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: eximeebpms
spec:
  to:
    kind: Service
    name: eximeebpms
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
